deploy/simple-server-deploy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-server-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-passthrough:  "true"
spec:
  tls:
    - hosts: 
      - simple-server-svc
      secretName: "generic-ingress-tls"
  rules:
  - host: simple-server.svc.cluster.local
    http:
      paths:
      - path: "/"
        backend:
          serviceName: "simple-server-svc"
          servicePort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: simple-server-svc
  namespace: kube-system
spec:
  ports:
  - name: https
    protocol: TCP
    port: 8443
    targetPort: 8443
  selector:
    app: simple-server-deploy
  type: "NodePort"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: simple-server-deploy
  name: simple-server-deploy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-server-deploy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-server-deploy
      name: simple-server-deploy
    spec:
      containers:
      - image: simple-server:latest
        imagePullPolicy: IfNotPresent
        name: simple-server-deploy
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /kube_certificates/
          name: certs
      dnsPolicy: ClusterFirst      
      restartPolicy: Always      
      volumes:
      - name: certs
        hostPath:
          path: /kube_certificates
